Updated branch to 1.3.0